--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,26 +5,31 @@
 </ion-header>
 
 <ion-content padding>
-  <form [formGroup]="loginForm">
-    <ion-item>
-      <ion-input required
-                 type="text"
-                 placeholder="Username"
-                 [formControlName]="'username'">
-      </ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-input required
-                 clearOnEdit="false"
-                 type="password"
-                 placeholder="Password"
-                 [formControlName]="'password'">
-      </ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-button size="medium"
-                  [disabled]="loginForm.invalid"
-                  (click)="login()">Login</ion-button>
-    </ion-item>
-  </form>
+  <ng-template [ngIf]="userService.token">
+    <h1>เข้าสู่ระบบสำเร็จ</h1>
+  </ng-template>
+  <ng-template [ngIf]="!userService.token">
+    <form [formGroup]="loginForm">
+      <ion-item>
+        <ion-input required
+                   type="text"
+                   placeholder="Username"
+                   [formControlName]="'username'">
+        </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input required
+                   clearOnEdit="false"
+                   type="password"
+                   placeholder="Password"
+                   [formControlName]="'password'">
+        </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-button size="medium"
+                    [disabled]="loginForm.invalid"
+                    (click)="login()">Login</ion-button>
+      </ion-item>
+    </form>
+  </ng-template>
 </ion-content>
