--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -8,10 +8,14 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="logo-ionic" slot="start"></ion-icon>
-      @ionicframework
-    </ion-item>
+    <h1>{{ title }}</h1>
+
+    <ion-list>
+      <ion-item *ngFor="let group of groupData; let i = index">
+        <ion-label>
+          <h2>{{ group?.group_name }}</h2>
+        </ion-label>
+      </ion-item>
+    </ion-list>
   </ion-list>
 </ion-content>
