--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -15,4 +15,13 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-card>
+    <ion-card-header>
+      Doughnut Chart
+    </ion-card-header>
+    <ion-card-content>
+      <canvas #doughnutCanvas></canvas>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
