Add back button

--- a/src/app/contact/contact-detail/contact-detail.page.html
+++ b/src/app/contact/contact-detail/contact-detail.page.html
@@ -5,7 +5,6 @@
 </ion-header>
 
 <ion-content padding>
-
   <ng-template [ngIf]="detail">
     <ion-card>
       <ion-card-header>
@@ -16,5 +15,7 @@
       </ion-card-content>
     </ion-card>
   </ng-template>
+
+  <ion-button size="medium" [href]="'/tabs/(contact:contact)'">Back</ion-button>
 
 </ion-content>
